Fix HTML formatting and update emblem source

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="container">
         <header class="header">
             <div class="logo-area">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Emblem_of_Sri_Lanka.svg/1200px-Emblem_of_Sri_Lanka.svg.png"
+                <img src="Emblem_of_Sri_Lanka.svg.png"
                     alt="Emblem of Sri Lanka" class="emblem">
                 <div class="title-group">
                     <h1>Flood Disaster Relief</h1>
@@ -144,5 +144,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
