--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2>Citizen Data Collection Portal</h2>
                 </div>
             </div>
-            <p class="subtitle">Please provide accurate details to assist with the relief efforts.</p>
+            <p class="subtitle">Please provide accurate details</br>to assist with the relief efforts.</p>
         </header>
 
         <form id="reliefForm" class="glass-form">
@@ -146,4 +146,5 @@
 
 
 </html>
+
 
